syntax = "proto3";

package pb;

option go_package = "github.com/sentrionic/horizon/pb";

message AccountResponse {
  string id = 1;
  string username = 2;
  string email = 3;
  string image = 4;
}